--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   google_fonts: ^2.0.0
   http: ^0.13.0
   velocity_x: ^2.5.0
+  provider: ^6.0.0
+  json_theme: ^2.1.1
+
 
 dev_dependencies:
   flutter_test:
